--- a/src/components/home/About.astro
+++ b/src/components/home/About.astro
@@ -1,22 +1,24 @@
 <section class="py-16 sm:py-20">
   <div class="mx-auto max-w-2xl px-4 sm:px-6 lg:max-w-7xl lg:px-8">
     <div class="grid gap-12 lg:grid-cols-3 lg:gap-8">
-      <h2 class="text-3xl font-medium tracking-tight sm:text-4xl">About</h2>
+      <h2 class="text-3xl font-medium tracking-tight sm:text-4xl">Sobre Nosotros</h2>
       <div class="flex flex-col items-start gap-8 sm:gap-10 lg:col-span-2">
         <p class="text-primary-950/70 dark:text-primary-200/70 text-base sm:text-lg">
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores impedit perferendis
-          suscipit eaque, iste dolor cupiditate blanditiis ratione. Lorem ipsum, dolor sit amet
-          consectetur adipisicing elit. Maiores impedit perferendis suscipit eaque, iste dolor
-          cupiditate blanditiis ratione. Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-          Maiores impedit perferendis suscipit eaque, iste dolor cupiditate blanditiis ratione.
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores impedit perferendis
-          suscipit eaque, iste dolor cupiditate.
+          "Somos un equipo de abogados comprometidos y apasionados que se especializan en sucesiones a.r.t y casos de accidentes de tránsito. Con una profunda comprensión de las complejidades legales en estas áreas, nos esforzamos por ofrecer asesoramiento legal excepcional y representación sólida a nuestros clientes.
+
+En cada caso, buscamos la justicia y la equidad, trabajando incansablemente para proteger los derechos de aquellos que confían en nosotros. Nuestra misión va más allá de la representación legal; nos dedicamos a aliviar la carga emocional y legal que conllevan situaciones difíciles, como la pérdida de un ser querido o las complicaciones de un accidente de tráfico.
+
+Nos enorgullece nuestro enfoque personalizado, donde cada cliente es único y cada caso se aborda con atención meticulosa. Creemos en la transparencia, la honestidad y la empatía, valores que guían nuestro trabajo diario.
+
+Con una trayectoria de éxito y un compromiso inquebrantable con la excelencia, estamos listos para ser su aliado legal en los momentos que más importan. Permítanos ser su recurso confiable y dedicado en asuntos legales de sucesiones a.r.t y accidentes de tránsito.
+
+Confíe en nosotros para proporcionar la experiencia legal que necesita y merece. Estamos aquí para usted, cada paso del camino."
         </p>
         <a
           href="/about"
           class="bg-primary-600 dark:bg-primary-400 hover:bg-primary-700 dark:hover:bg-primary-300 focus-visible:outline-primary-600 dark:focus-visible:outline-primary-400 dark:text-primary-950 inline-flex items-center justify-center rounded-full border border-transparent px-5 py-3 text-base font-medium text-white transition focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2"
         >
-          Read about us
+          Lee sobre nosotros
         </a>
       </div>
     </div>
