--- a/src/components/home/Testimonials.astro
+++ b/src/components/home/Testimonials.astro
@@ -1,25 +1,25 @@
 ---
 const testimonials = [
   {
-    name: 'Rebecca Hayes',
-    description: 'Designer',
+    name: 'Rebeca Gadera',
+    description: 'Diseñadora',
     image: '/assets/testimonial-1.webp',
     message:
-      '“Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo expedita voluptas culpa sapiente alias molestiae. Numquam corrupti in laborum sed rerum et corporis.”',
+      '"Me sentí respaldado y comprendida desde el primer momento. El equipo de abogados demostró un profundo conocimiento y me guiaron con paciencia a lo largo del proceso. Gracias a su dedicación, logramos una resolución exitosa para mi caso. ¡Los recomendaría sin dudarlo!"',
   },
   {
-    name: 'Rosa Spencer',
-    description: 'Team Leader',
+    name: 'Rosa Melano',
+    description: 'Empleada domestica',
     image: '/assets/testimonial-2.webp',
     message:
-      '“Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo expedita voluptas culpa sapiente alias molestiae. Numquam corrupti in laborum sed rerum et corporis.”',
+      '"En un momento difícil después de un accidente de tránsito, encontré el apoyo que necesitaba en este despacho de abogados. Su enfoque profesional y compasivo hizo que todo el proceso fuera más llevadero. Estoy agradecida por su atención personalizada y resultados efectivos."',
   },
   {
-    name: 'Christina Upton',
-    description: 'Manager',
+    name: 'Cristina Turner',
+    description: 'Panadera',
     image: '/assets/testimonial-3.webp',
     message:
-      '“Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo expedita voluptas culpa sapiente alias molestiae. Numquam corrupti in laborum sed rerum et corporis.”',
+      '"La atención legal que recibí en asuntos de a.r.t superó mis expectativas. El equipo no solo demostró experiencia legal, sino también empatía y comprensión hacia mi situación. Si buscas abogados comprometidos, definitivamente recomendaría este despacho."',
   },
 ];
 ---
@@ -28,7 +28,7 @@ const testimonials = [
   <div class="v mx-auto px-4 sm:px-6 lg:max-w-7xl lg:px-8">
     <div class="flex flex-col items-center gap-12 lg:gap-20">
       <h2 class="mx-auto max-w-xl text-center text-3xl font-medium tracking-tight sm:text-4xl">
-        Trusted by the largest companies in the world
+        Con la confianza de nuestros clientes.
       </h2>
       <div
         class="divide-primary-900/10 dark:divide-primary-300/10 grid divide-y lg:grid-cols-3 lg:divide-x lg:divide-y-0"
