--- a/src/components/pricing/PricingTable.astro
+++ b/src/components/pricing/PricingTable.astro
@@ -34,7 +34,7 @@ const pricing = [
   },
 ];
 ---
-
+<!--
 <section class="py-16 sm:py-20">
   <div class="mx-auto max-w-2xl px-4 sm:px-6 lg:max-w-7xl lg:px-8">
     <div class="-mt-8 grid gap-8 lg:mt-0 lg:grid-cols-3">
@@ -84,4 +84,4 @@ const pricing = [
       }
     </div>
   </div>
-</section>
+</section>-->
