--- a/src/components/about/Mission.astro
+++ b/src/components/about/Mission.astro
@@ -1,20 +1,20 @@
 ---
 const stats = [
   {
-    name: 'Years',
+    name: 'Años',
     value: '9',
   },
   {
-    name: 'Experts',
+    name: 'Expertos',
     value: '15',
   },
   {
-    name: 'Projects',
+    name: 'Casos',
     value: '122',
   },
   {
-    name: 'Awards',
-    value: "'9'",
+    name: 'Reconocimientos',
+    value: '9',
   },
 ];
 ---
@@ -26,32 +26,22 @@ const stats = [
         class="mx-auto h-auto w-full max-w-xl rounded-3xl"
         width="576"
         height="864"
-        src="/assets/about.webp"
+        src="https://images.pexels.com/photos/8112175/pexels-photo-8112175.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
         alt="Our experts working together"
       />
       <div class="flex flex-col gap-10">
         <!-- Mission description -->
         <div class="space-y-8 sm:space-y-12">
-          <h2 class="text-3xl font-medium tracking-tight sm:text-4xl">Our mission</h2>
+          <h2 class="text-3xl font-medium tracking-tight sm:text-4xl">Nuestra misión</h2>
           <div class="space-y-6">
             <p class="text-primary-950/70 dark:text-primary-200/70 text-base sm:text-lg">
-              Sagittis scelerisque nulla cursus in enim consectetur quam. Dictum urna sed
-              consectetur neque tristique pellentesque. Blandit amet, sed aenean erat arcu morbi.
-              Cursus faucibus nunc nisl netus morbi vel porttitor vitae ut. Amet vitae fames
-              senectus vitae.
+              En nuestro estudio legal, nos dedicamos a trascender las expectativas al proporcionar servicios jurídicos excepcionales y personalizados en las áreas de sucesiones a.r.t y accidentes de tránsito. Nuestra misión fundamental es ser el faro que guía a aquellos que enfrentan momentos legales desafiantes, ofreciéndoles no solo experiencia legal, sino también apoyo emocional y comprensión.
             </p>
             <p class="text-primary-950/70 dark:text-primary-200/70 text-base sm:text-lg">
-              Sollicitudin tristique eros erat odio sed vitae, consequat turpis elementum. Lorem
-              nibh vel, eget pretium arcu vitae. Eros eu viverra donec ut volutpat donec laoreet
-              quam urna. Sollicitudin tristique eros erat odio sed vitae, consequat turpis
-              elementum. Lorem nibh vel, eget pretium arcu vitae. Eros eu viverra donec ut volutpat
-              donec laoreet quam urna.
+              Nos comprometemos a defender los derechos de nuestros clientes con integridad y pasión, priorizando la justicia y la equidad en cada caso que abordamos. Creemos que la ley es una herramienta poderosa para el cambio positivo, y nuestra misión es utilizarla para mejorar la vida de aquellos a quienes servimos.
             </p>
             <p class="text-primary-950/70 dark:text-primary-200/70 text-base sm:text-lg">
-              Rhoncus nisl, libero egestas diam fermentum dui. At quis tincidunt vel ultricies.
-              Vulputate aliquet velit faucibus semper. Pellentesque in venenatis vestibulum
-              consectetur nibh id. In id ut tempus egestas. Enim sit aliquam nec, a. Morbi enim
-              fermentum lacus in. Viverra.
+              Buscamos no solo resolver problemas legales, sino también aliviar el peso emocional que conllevan. En casos de sucesiones, nos esforzamos por facilitar el proceso, brindando orientación comprensiva en momentos difíciles. Para casos de A.R.T y accidentes, nos convertimos en defensores incansables, asegurando que cada cliente reciba la atención y compensación que merece.
             </p>
           </div>
         </div>
