--- a/src/components/home/Expertise.astro
+++ b/src/components/home/Expertise.astro
@@ -2,39 +2,39 @@
 const features = [
   {
     id: 'expertise-1',
-    name: 'Digital Experience Platforms',
+    name: 'Asesoramiento para A.R.T:',
     description:
-      'Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores impedit perferendis suscipit eaque, iste dolor cupiditate blanditiis ratione.',
+      ' Nuestros abogados especializados en A.R.T están comprometidos en brindar asesoramiento integral en casos relacionados con accidentes laborales y las correspondientes reclamaciones a las Aseguradoras de Riesgos del Trabajo (A.R.T). Desde la evaluación inicial hasta la representación legal, trabajamos para garantizar que los derechos de nuestros clientes estén protegidos durante todo el proceso.',
   },
   {
     id: 'expertise-2',
-    name: 'Web & Mobile Development',
+    name: 'Representación en Casos de Accidentes de Tránsito:',
     description:
-      'Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores impedit perferendis suscipit eaque, iste dolor cupiditate blanditiis ratione.',
+      'Enfrentar las consecuencias de un accidente de tránsito puede ser abrumador. Nuestro equipo legal está especializado en la representación de víctimas de accidentes, asegurando la obtención de compensaciones justas. Ya sea que necesite asistencia en la negociación con aseguradoras o representación en juicio, estamos aquí para brindarle apoyo y buscar la mejor solución para su caso.',
   },
   {
     id: 'expertise-3',
-    name: 'Serverless Computing Platforms',
+    name: 'Asesoramiento en Herencias y Sucesiones:',
     description:
-      'Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores impedit perferendis suscipit eaque, iste dolor cupiditate blanditiis ratione.',
+      'La pérdida de un ser querido es un momento difícil, y las cuestiones relacionadas con herencias y sucesiones pueden complicar aún más las cosas. Ofrecemos asesoramiento legal compasivo y experto para facilitar el proceso sucesorio, asegurándonos de que los bienes se distribuyan de acuerdo con la voluntad del fallecido y las leyes aplicables.',
   },
   {
     id: 'expertise-4',
-    name: 'Build & Test Automation Tools',
+    name: 'Reclamaciones por Incapacidad Laboral:',
     description:
-      'Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores impedit perferendis suscipit eaque, iste dolor cupiditate blanditiis ratione.',
+      'Si ha sufrido un accidente laboral que resulta en incapacidades, estamos aquí para ayudarle a navegar por el proceso de reclamación por incapacidad laboral. Nos aseguramos de que sus derechos sean protegidos y que reciba la compensación adecuada para cubrir los costos médicos y de vida asociados con la incapacidad.',
   },
   {
     id: 'expertise-5',
-    name: 'Artificial Intelligence',
+    name: 'Defensa Legal en Casos de Responsabilidad Civil por Accidentes de Tráfico:',
     description:
-      'Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores impedit perferendis suscipit eaque, iste dolor cupiditate blanditiis ratione.',
+      'La responsabilidad civil en casos de accidentes de tráfico puede ser compleja. Nuestros abogados especializados en este campo brindan representación legal sólida para aquellos que enfrentan reclamaciones o demandas por responsabilidad civil. Estamos comprometidos en proteger sus intereses y buscar soluciones justas y equitativas.',
   },
   {
     id: 'expertise-6',
-    name: 'Full project support',
+    name: 'Negociación con Aseguradoras:',
     description:
-      'Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores impedit perferendis suscipit eaque, iste dolor cupiditate blanditiis ratione.',
+      'La responsabilidad civil en casos de accidentes de tráfico puede ser compleja. Nuestros abogados especializados en este campo brindan representación legal sólida para aquellos que enfrentan reclamaciones o demandas por responsabilidad civil. Estamos comprometidos en proteger sus intereses y buscar soluciones justas y equitativas.',
   },
 ];
 ---
@@ -42,7 +42,7 @@ const features = [
 <section class="py-16 sm:py-20">
   <div class="mx-auto max-w-2xl px-4 sm:px-6 lg:max-w-7xl lg:px-8">
     <div class="grid gap-12 lg:grid-cols-3 lg:gap-8">
-      <h2 class="text-3xl font-medium tracking-tight sm:text-4xl">Expertise</h2>
+      <h2 class="text-3xl font-medium tracking-tight sm:text-4xl">Expertos en</h2>
       <div class="lg:col-span-2">
         <dl
           class="-mt-3"
