--- a/src/components/home/Services.astro
+++ b/src/components/home/Services.astro
@@ -2,21 +2,21 @@
 const services = [
   {
     step: '01',
-    name: 'Design',
+    name: 'Sucesiones',
     description:
-      'Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores impedit perferendis suscipit eaque, iste dolor cupiditate blanditiis ratione.',
+      'En momentos delicados como la gestión de sucesiones, proporcionamos asesoramiento legal con sensibilidad y experiencia. Nos comprometemos a guiarle a través de cada paso del proceso, asegurando que sus asuntos familiares se resuelvan con respeto y eficiencia.',
   },
   {
     step: '02',
-    name: 'Develop',
+    name: 'A.R.T (Aseguradoras de Riesgos del Trabajo)',
     description:
-      'Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores impedit perferendis suscipit eaque, iste dolor cupiditate blanditiis ratione.',
+      'Con una profunda comprensión de las complejidades de las Aseguradoras de Riesgos del Trabajo, nos especializamos en representar a trabajadores afectados. Nuestra dedicación es obtener la compensación justa que merecen, brindando tranquilidad a aquellos que han sufrido accidentes laborales.',
   },
   {
     step: '03',
-    name: 'Maintain',
+    name: 'Accidentes de Tránsito',
     description:
-      'Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores impedit perferendis suscipit eaque, iste dolor cupiditate blanditiis ratione.',
+      'Cuando se enfrenta a las secuelas de un accidente de tráfico, nosotros estamos aquí para brindarle el respaldo legal que necesita. Nuestro equipo especializado se encargará de guiarle a través de los desafíos legales, asegurándonos de que sus derechos estén protegidos y buscando la compensación justa que merece.',
   },
 ];
 ---
@@ -24,12 +24,12 @@ const services = [
 <section class="py-16 sm:py-20">
   <div class="mx-auto max-w-2xl px-4 sm:px-6 lg:max-w-7xl lg:px-8">
     <div class="flex flex-col gap-12 sm:gap-16">
-      <h2 class="text-3xl font-medium tracking-tight sm:text-4xl">Services</h2>
+      <h2 class="text-3xl font-medium tracking-tight sm:text-4xl">Servicios</h2>
       <div class="grid gap-8 lg:grid-cols-3">
         {
           services.map((service) => (
             <div class="bg-primary-500/10 dark:bg-primary-400/10 flex flex-col gap-12 rounded-3xl px-6 py-8">
-              <p class="text-sm">{service.step}</p>
+            
               <div class="flex flex-col gap-4">
                 <h3 class="text-xl font-medium">{service.name}</h3>
                 <p class="text-primary-950/70 dark:text-primary-200/70 text-base sm:text-lg">
