--- a/src/components/layout/Footer.astro
+++ b/src/components/layout/Footer.astro
@@ -89,10 +89,9 @@ const bottomLinks = [
           alt="Stone"
         />
         <p class="text-primary-950/70 dark:text-primary-200/70 text-base">
-          Stone is a premium Astro theme specially designed for Business, Marketing, SaaS and
-          Startup websites.
+        Estudio jurídico Irigoyen y Asoc.
         </p>
-        <p class="text-primary-950/70 dark:text-primary-200/70 text-sm">© 2023 Stone</p>
+        <p class="text-primary-950/70 dark:text-primary-200/70 text-sm"> &copy; {new Date().getFullYear()} - Patuka Technologies.</p>
       </div>
 
       <!-- Bottom links -->
