--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -2,22 +2,22 @@
 const links = [
   {
     ref: '01',
-    name: 'Home',
+    name: 'Inicio',
     href: '/',
   },
   {
     ref: '02',
-    name: 'About',
+    name: 'Quienes somos?',
     href: '/about',
   },
   {
     ref: '03',
-    name: 'Pricing',
+    name: 'Preguntas Frecuentes',
     href: '/pricing',
   },
   {
     ref: '04',
-    name: 'Contact',
+    name: 'Contacto',
     href: '/contact',
   },
 ];
@@ -141,8 +141,7 @@ const links = [
         <p
           class="text-primary-950/70 dark:text-primary-200/70 max-w-sm text-xl italic leading-loose"
         >
-          <span class="font-medium">Stone</span> is a premium Astro theme specially designed for
-          Business, Marketing, SaaS and Startup websites.
+          <span class="font-medium"></span>  En momentos difíciles, confíe en nosotros para proporcionarle apoyo y representación con compasión y experiencia.
         </p>
       </div>
 
