--- a/src/components/about/Values.astro
+++ b/src/components/about/Values.astro
@@ -17,7 +17,7 @@ const values = [
   [
     {
       ref: '03',
-      name: 'Equipo de Trabajo',
+      name: 'Confianza',
       description:
         'En resumen, nuestra misión es ser el apoyo legal confiable y dedicado que la comunidad necesita en momentos cruciales. Estamos aquí para transformar desafíos legales en soluciones, proporcionando a nuestros clientes la tranquilidad y el respaldo que merece.',
     },
